--- a/src/client/modules/my/tile/tile.html
+++ b/src/client/modules/my/tile/tile.html
@@ -9,7 +9,12 @@
             </div>
         </div>
         <div class="video-responsive">
-            <iframe width="420" height="315" src={tile.videoURL} frameborder="0" allowfullscreen></iframe>
+            <template if:true={tile.videoURL}>
+                <iframe width="420" height="315" src={tile.videoURL} frameborder="0" allowfullscreen></iframe>
+            </template>
+            <template if:false={tile.videoURL}>
+                <img src={tile.imgURL} alt="preview image for app" />
+            </template>
         </div>
         <div class="description">{tile.description}</div>
         <div class="button_area">
